neogym-html/project-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: webapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: santyy9700/my-website-gym:latest # Update this line
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: webapp2
spec:
  type: NodePort
  selector:
    app: website
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
    targetPort: 8081
    protocol: TCP
    name: https
